# stimfit

./: .cproject  .gbp.conf  .gitignore  .gitmodules  .hgignore  .project  .texlipse  .travis.yml  1  BRANCHES.md  BUGS  BUILDING.md  CMAKE_MIGRATION.md  CMakeLists.txt  CMakePresets.json  ChangeLog  Doxyfile  Doxyfile_Debian  Makefile  Makefile.am  Makefile.am.orig  Makefile.in  Makefile.static  Makefile.static.in  O1.txt  README  README.md  SyncToyDirectoryId.txt  TODO  TODO_Andrew.md  ]  aclocal.m4  acsite.m4  autogen.sh  bootstrap  build_linux_cmake.sh  build_macos_cmake.sh  build_windows_msvc.ps1  commit.bat  commit.sh  (+49 more)
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
src/app/: .#app.cpp  .app.cpp.swo  Makefile  Makefile.am  Makefile.am.orig  Makefile.in  app.cpp  app.h  childframe.cpp  childframe.h  copygrid.cpp  copygrid.h  doc.cpp  doc.h  dummy.cpp  frame.cpp  frame.h  graph.cpp  graph.h  parentframe.cpp  parentframe.h  printout.cpp  stfcheckbox.cpp  table.h  unopt.cpp  view.cpp  view.h  zoom.cpp  zoom.h
src/app/.deps/: Axb.Plo  CrossPlatformFileIO.Plo  WriteWave.Plo  cfs.Plo  libstimfit_la-AxoGraph_ReadWrite.Plo  libstimfit_la-FileIO.Plo  libstimfit_la-FileReadCache.Plo  libstimfit_la-Oldheadr.Plo  libstimfit_la-ProtocolReaderABF2.Plo  libstimfit_la-SimpleStringCache.Plo  libstimfit_la-abf2headr.Plo  libstimfit_la-abferror.Plo  libstimfit_la-abffiles.Plo  libstimfit_la-abfheadr.Plo  libstimfit_la-abfhwave.Plo  libstimfit_la-abflib.Plo  libstimfit_la-abfutil.Plo  libstimfit_la-app.Plo  libstimfit_la-asciilib.Plo  libstimfit_la-atflib.Plo  libstimfit_la-axatffio32.Plo  libstimfit_la-axglib.Plo  libstimfit_la-byteswap.Plo  libstimfit_la-cfslib.Plo  libstimfit_la-channel.Plo  libstimfit_la-childframe.Plo  libstimfit_la-copygrid.Plo  libstimfit_la-core.Plo  libstimfit_la-csynch.Plo  libstimfit_la-cursorsdlg.Plo  libstimfit_la-doc.Plo  libstimfit_la-eventdlg.Plo  libstimfit_la-fileUtils.Plo  libstimfit_la-filedesc.Plo  libstimfit_la-fileio2.Plo  libstimfit_la-fitlib.Plo  libstimfit_la-fitseldlg.Plo  libstimfit_la-funclib.Plo  libstimfit_la-graph.Plo  libstimfit_la-hdf5lib.Plo  (+21 more)
src/app/dlgs/: Makefile.in  cursorsdlg.cpp  cursorsdlg.h  eventdlg.cpp  eventdlg.h  fitseldlg.cpp  fitseldlg.cpp.orig  fitseldlg.h  fitseldlg.h.orig  smalldlgs.cpp  smalldlgs.h
src/app/funclib/: funclib.cpp  funclib.h
src/app/plugins/: plugins.cpp  plugins.h
src/app/stfpython/: stfpython.cpp  stfpython.h
src/app/usrdlg/: usrdlg.cpp  usrdlg.h
src/app/wx/: dclatex.h
src/core/: .#stimdefs.h  Makefile.am  channel.cpp  channel.h  core.cpp  core.h  fitlib.cpp  fitlib.cpp.orig  fitlib.h  fitlib.h.orig  measlib.cpp  measlib.h  recording.cpp  recording.h  section.cpp  section.h  section_test.cpp  spline.h  stimdefs.h
src/core/filelib/: Son.h  abflib.cpp  abflib.h  asciilib.cpp  asciilib.h  atflib.cpp  atflib.h  axglib.cpp  axglib.h  biosiglib.cpp  biosiglib.cpp~  biosiglib.h  cfs.c  cfs.cpp  cfs.h  cfslib.cpp  cfslib.h  hdf5lib.cpp  hdf5lib.h  hekalib.cpp  hekalib.h  igorlib.cpp  igorlib.h  machine.h  sonlib.h  stfio.h
src/core/levmar/: Makefile.am  levmar.h  lm.h  lm_core.c  lmbc_core.c  misc.h
src/icons/: 16-em-open.xpm  accept.xpm  arrow_down.xpm  arrow_left.xpm  arrow_out.xpm  arrow_right.xpm  bin.xpm  ch2.xpm  ch2_old.xpm  cursor.xpm  event.xpm  fit_lim.xpm  latency_lim.xpm  resultset_first.xpm  resultset_last.xpm  resultset_previous.xpm  sum_new.xpm  sum_new_aligned.xpm  table.xpm  zoom.xpm  zoom_out.xpm
src/libbiosig/: CMakeLists.txt
src/libbiosiglite/: CMakeLists.txt  Makefile.am  eventcodegroups.i
src/libbiosiglite/biosig4c++/: 11073-10102-AnnexB.i  THANKS  biosig-HL7aECG-stub.c  biosig-dev.h  biosig-network.c  biosig-network.h  biosig.c  biosig.h  biosig2.c  biosig2.h  config.h  eventcodegroups.i  eventcodes.i  gdftime.c  gdftime.h  mdc_ecg_codes.c  mdc_ecg_codes.h  physicalunits.c  physicalunits.h  units.i
src/libstfio/: CMakeLists.txt  Makefile.am  annotation.cpp  annotation.h  axglib.cpp  axglib.h  cfslib.h  channel.cpp  channel.h  core.h  igorlib.cpp  measure.cpp  measure.h  recording.cpp  recording.h  section.cpp  section.h  stfio.cpp  stfio.h
src/libstfio/.deps/: AxoGraph_ReadWrite.Plo  CrossPlatformFileIO.Plo  FileIO.Plo  FileReadCache.Plo  Oldheadr.Plo  ProtocolReaderABF2.Plo  SimpleStringCache.Plo  WriteWave.Plo  abf2headr.Plo  abferror.Plo  abffiles.Plo  abfheadr.Plo  abfhwave.Plo  abflib.Plo  abfutil.Plo  atflib.Plo  axatffio32.Plo  axglib.Plo  byteswap.Plo  cfs.Plo  cfslib.Plo  channel.Plo  csynch.Plo  fileUtils.Plo  filedesc.Plo  fileio2.Plo  hdf5lib.Plo  hekalib.Plo  igorlib.Plo  msbincvt.Plo  recording.Plo  section.Plo  stfio.Plo  stringUtils.Plo  unix.Plo
src/libstfio/abf/: abflib.cpp  abflib.h
src/libstfio/ascii/: asciilib.cpp  asciilib.h
src/libstfio/atf/: atflib.cpp  atflib.h
src/libstfio/axg/: AxoGraph_ReadWrite.cpp  AxoGraph_ReadWrite.h  axglib.cpp  axglib.h  fileUtils.cpp  fileUtils.h  longdef.h  stringUtils.h
src/libstfnum/: CMakeLists.txt  Makefile.am  fit.cpp  fit.h  funclib.cpp  funclib.h  measure.cpp  measure.h  spline.h  stfnum.cpp  stfnum.h
src/pystfio/: CMakeLists.txt  Makefile.am  __init__.py  gccwarn  pystfio.cxx  pystfio.h  pystfio.i  pystfio_wrap.cxx  setup.py  setup.py.in  stfio_neo.py  stfio_plot.py  stfioswig.cxx  stfioswig.h  stfioswig.i  test.h5  unittest_stfio.py
src/res/: stimfit.aps  stimfit.rc
src/stfswig/: AP.py  Doxyfile  Makefile  Makefile.am  Makefile.am.orig  Makefile.in  Vector.py  charlie.py  embedded_init.py  embedded_ipython.py  embedded_mpl.py  embedded_stf.py  extensions.py  hdf5tools.py  helpers.cpp  ivtools.py  libstf.la  mintools.py  natools.py  plottools.py  spells.py  stf.py  stf_init.py  stfio.py  stfio_plot.py  stfioswig.cxx  stfioswig.h  stfioswig.i  stfioswig_wrap.c  stfioswig_wrap.cxx  stfswig.cxx  stfswig.cxx.orig  stfswig.h  stfswig.i  stfswig_wrap.cxx  stfswig_wrap.cxx.orig  unittest_stfio.py
src/stimfit/: Annotation.cpp  CMakeLists.txt  Makefile.am  sip.h  stf.cpp  stf.h
src/test/: CMakeLists.txt  channel.cpp  fit.cpp  measure.cpp  recording.cpp  section.cpp  test.cpp
(+2584 files in other folders)
